--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -1,5 +1,5 @@
 $black: #000000;
 $black-coffee: #36261A;
-$middle-coffee: #D69869; 
+$middle-coffee: #8B5E3C;
 $white-coffee: #E9B58E;
 $white: #FFFFFF;
