--- a/src/styles/scss/contact/_footer1.scss
+++ b/src/styles/scss/contact/_footer1.scss
@@ -2,7 +2,6 @@
 @use '../mixins';
 
 .footer {
-    background-color: variables.$white-coffee;
     padding: 5rem 2rem 3rem;
     margin-top: 0rem;
     border-top: 1px solid rgba(variables.$black-coffee, 0.05);
@@ -51,7 +50,7 @@
 
     // El copyright y texto legal
     p {
-        color: variables.$black-coffee;
+        color: variables.$white;
         font-size: 0.85rem;
         opacity: 0.5;
         letter-spacing: 0.05rem;
